@@ -62,7 +62,7 @@ Common.About.BuildDate     =Build Date:
 Common.About.Distribution  =Distribution:
 Common.About.JavaVersion   =Java Version:
 Common.About.OSVersion     =OS Version:
-Common.About.SoftwareAgreementButton=Software Use Agreement...
+Common.About.AgreementButton=Software Use Agreement...
 Common.About.LicenseDialog.Title=License
 Common.About.CreditsButton=Credits...
 Common.About.CreditsDialog.Title=Credits
