@@ -1,3 +1,4 @@
+2-12-08: #1231, change About>OK to About>Close
 2-12-08: #1225, make Software Use Agreement available from About dialog
 2-9-09: #1120, major reorg of JARLauncher, show exceptions to the user via a dialog
 2-9-09: #1120, consolidate properties files into jar-launcher.properties
